# summer_school

./: CMakeLists.txt  hello.c  hello.cpp
